auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f400fbe",
+   "id": "b3e54fd5",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0303b9e5",
+   "id": "3f2cc276",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d4b755",
+   "id": "90e95f6d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5231b38a",
+   "id": "f7a7e18d",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42fbebd4",
+   "id": "28542350",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d315f6",
+   "id": "a5f08e2e",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910f1530",
+   "id": "3f978217",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337e870f",
+   "id": "6db8c838",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e971b0ac",
+   "id": "aa94d23f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04696603",
+   "id": "fde37e98",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8cc1e9",
+   "id": "a3ea3d53",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201f111e",
+   "id": "2d549cd9",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d3b14e6",
+   "id": "7e01d533",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d03d8381",
+   "id": "68736af9",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375179a0",
+   "id": "328ae1f2",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital,\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd99ca9",
+   "id": "31fde9aa",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "589f9598",
+   "id": "a7c5ea79",
    "metadata": {},
    "source": [
     "Using [(16.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3d0741a",
+   "id": "bf3758ef",
    "metadata": {
     "hide-output": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36c77cc",
+   "id": "38f43ce6",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51117eb9",
+   "id": "9fa53fd6",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b172fa",
+   "id": "064bd2fb",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab324fab",
+   "id": "aa1b2cc4",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5016dfc6",
+   "id": "6cb26be1",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90053618",
+   "id": "31850f28",
    "metadata": {
     "hide-output": false
    },
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddd7521",
+   "id": "cfd6fe65",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78cf1299",
+   "id": "6f249b1d",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9b7d8c",
+   "id": "4f6a688d",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb6ca70",
+   "id": "6be83d01",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41318146",
+   "id": "ed80fa51",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719ccc9f",
+   "id": "96c09ef2",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d947af",
+   "id": "b5872a2c",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c957ad",
+   "id": "dc3339d3",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d0627e",
+   "id": "24772e53",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4026dce3",
+   "id": "a428926a",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b00eb980",
+   "id": "c553bc90",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877eb5e1",
+   "id": "f2d2875d",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a17cae",
+   "id": "53a1407a",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e356d6",
+   "id": "ae75fdf8",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e683d7",
+   "id": "cc76d560",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cfec90",
+   "id": "22658133",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707c869a",
+   "id": "ab51f303",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb8ab8f",
+   "id": "c522d636",
    "metadata": {
     "hide-output": false
    },
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc63b1a8",
+   "id": "9b852199",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d49480",
+   "id": "a27346eb",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b855cd",
+   "id": "fa00b794",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c892c0d",
+   "id": "bab96ffd",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb01eebc",
+   "id": "343dddcf",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf5bda3",
+   "id": "19785df7",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d585bfdc",
+   "id": "55a73b75",
    "metadata": {
     "hide-output": false
    },
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab888f0c",
+   "id": "c9b20926",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4fd9fe",
+   "id": "53d8d99e",
    "metadata": {
     "hide-output": false
    },
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b48cb4",
+   "id": "d7db5f07",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5440c8c6",
+   "id": "d4891d1b",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baea7d8e",
+   "id": "491cb3e3",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec54fee3",
+   "id": "dd817dd0",
    "metadata": {
     "hide-output": false
    },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3defb57a",
+   "id": "4c268f43",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1d94f89",
+   "id": "d9669cd9",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee01a19",
+   "id": "e354b033",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba0d08a",
+   "id": "21db1431",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56f6dd5f",
+   "id": "3d94c2a4",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2ed5cc",
+   "id": "ec0ecdd7",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a73a390",
+   "id": "997968a7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2e7e4f",
+   "id": "6e8dfc8f",
    "metadata": {},
    "source": [
     "## Exercise 16.1\n",
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ccd2c8d",
+   "id": "80730fac",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 16.1](https://jax.quantecon.org/#aygr_ex1)"
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5051d82",
+   "id": "b2c491b7",
    "metadata": {
     "hide-output": false
    },
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "289faf4c",
+   "id": "cb4f286f",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d22eac3",
+   "id": "c1210bfc",
    "metadata": {},
    "source": [
     "## Exercise 16.2\n",
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866ee76e",
+   "id": "8485bd77",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 16.2](https://jax.quantecon.org/#aygr_ex2)\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "babe7a14",
+   "id": "020559c9",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29a6f12",
+   "id": "10f1c545",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec3c6bc",
+   "id": "0d1fe697",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c4d6937",
+   "id": "87df25f4",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef4ecf2d",
+   "id": "f2546efd",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da6ac537",
+   "id": "df00d22f",
    "metadata": {
     "hide-output": false
    },
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe75196",
+   "id": "adcf10ad",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec114e2f",
+   "id": "8ca4607e",
    "metadata": {
     "hide-output": false
    },
@@ -1305,7 +1305,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624842.8544095,
+  "date": 1710721917.0210862,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
