--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3985942",
+   "id": "077602b8",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,24 +10,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b08442",
+   "id": "e8ccf03e",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
     "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
-    "In addition to what’s in Anaconda, this lecture will need the following libraries:"
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18bb43c7",
+   "id": "8a6f805c",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c625a5",
+   "id": "94c5cef7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e3ef89",
+   "id": "45f0b4bd",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0bcec5",
+   "id": "d30f785a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f442ec",
+   "id": "7dd0a0cd",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5cfb9a0",
+   "id": "e7c8f336",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b16285",
+   "id": "ea338e63",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cfa8398",
+   "id": "fa96e936",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d33b2b3",
+   "id": "70356284",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c65d069",
+   "id": "d0bb1f10",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2175d5",
+   "id": "7f45eb35",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93555350",
+   "id": "053ef43c",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0f1039",
+   "id": "38042b4d",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f71a7fe",
+   "id": "352749b3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea01a37b",
+   "id": "a0765f96",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "133c1b1c",
+   "id": "62352c81",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b0c1d6",
+   "id": "57369fd4",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbdf99c6",
+   "id": "f67e18e0",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ab99d5",
+   "id": "8bacf227",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9fadcc",
+   "id": "e055b0be",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9523d0bb",
+   "id": "08512051",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e26a70",
+   "id": "2a8ddd1c",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf21743",
+   "id": "82327a46",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699c1ae0",
+   "id": "bc52efa2",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e9c9174",
+   "id": "b87b86b0",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313d6dcb",
+   "id": "53eeb24b",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc42bae",
+   "id": "0af1fcee",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11db30ad",
+   "id": "9cd5d89f",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ac41f0b",
+   "id": "102b6b59",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c497853",
+   "id": "104246e1",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3cc72ed",
+   "id": "e2a6c2eb",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01acbbc3",
+   "id": "3eb56190",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c75a14e",
+   "id": "72216548",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3a7b95",
+   "id": "33ad1372",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d5cf5e",
+   "id": "0a1f16d8",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229868cd",
+   "id": "441ec62b",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc85ea6c",
+   "id": "6377d0c4",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa94250",
+   "id": "371fe410",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771954fd",
+   "id": "2b305ecf",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12189112",
+   "id": "d9f30cc1",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47467c44",
+   "id": "5bf83abc",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abb5e81d",
+   "id": "008adb09",
    "metadata": {},
    "source": [
     "## Exercise 15.1\n",
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f44037",
+   "id": "e837c392",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 15.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "237daaf6",
+   "id": "ee5010ab",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534eabfe",
+   "id": "e82991fa",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Are08](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8de635",
+   "id": "4649b206",
    "metadata": {
     "hide-output": false
    },
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80b7039",
+   "id": "b21eb463",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80a1ad1d",
+   "id": "d235aac5",
    "metadata": {
     "hide-output": false
    },
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81270966",
+   "id": "7d563d98",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b904cb",
+   "id": "7a0e23a7",
    "metadata": {
     "hide-output": false
    },
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42173fbc",
+   "id": "2fc8fe92",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780524c4",
+   "id": "ff120f49",
    "metadata": {
     "hide-output": false
    },
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e19403",
+   "id": "2422646b",
    "metadata": {
     "hide-output": false
    },
@@ -1254,7 +1254,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624842.9160683,
+  "date": 1710721917.0781567,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
