--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9581935d",
+   "id": "700145d1",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c719863",
+   "id": "e6fad70b",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa42551",
+   "id": "04a1804f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,13 +37,13 @@
     "\n",
     "Here we focus on providing an efficient JAX implementation.\n",
     "\n",
-    "We will use the following libraries and imports."
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad6faa6",
+   "id": "4758adc9",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb2b456",
+   "id": "5be06ce0",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd651f3",
+   "id": "864a3afa",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68f88ba",
+   "id": "8e7457f3",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae327c34",
+   "id": "2f0225af",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a10538",
+   "id": "d6c50bb0",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35466d5",
+   "id": "4cadd91a",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd277c56",
+   "id": "5de65e62",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8690e7",
+   "id": "8ad2c3ae",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6ee5dc",
+   "id": "d2d20d64",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f2719b",
+   "id": "f22c39e9",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b45a0b",
+   "id": "1cd3f864",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da5c083",
+   "id": "b7185b50",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b59136",
+   "id": "77722426",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0554746",
+   "id": "576afd78",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "072b798e",
+   "id": "70a17fe4",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a79c6cd",
+   "id": "b9040446",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b934e7",
+   "id": "4071283f",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93dcb655",
+   "id": "2936a218",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cbc112d",
+   "id": "9afef70e",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8854083",
+   "id": "6fe95b03",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4ee5ad",
+   "id": "cad162a0",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d13a05d",
+   "id": "3b0b1bbb",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad1dfb4",
+   "id": "75cabd87",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b447b1",
+   "id": "8e5c82cc",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e30b1db",
+   "id": "202cdb91",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "263abb44",
+   "id": "ed3c7fd0",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e66642",
+   "id": "a6aef53f",
    "metadata": {
     "hide-output": false
    },
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c312dd",
+   "id": "4a2c6384",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e00fd6",
+   "id": "6684521f",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2b70f52",
+   "id": "a6348c22",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8c1f81",
+   "id": "bbc6da59",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b878f47",
+   "id": "5bd10d7b",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -818,7 +818,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624842.9883876,
+  "date": 1710721917.147418,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
