--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9053c7bc",
+   "id": "77308996",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9b6f99",
+   "id": "83cbfacf",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be382801",
+   "id": "cd9befdc",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372a7b09",
+   "id": "c7dc84ba",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef15a262",
+   "id": "5a264fe5",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14be1df6",
+   "id": "5904b168",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e0e3ec",
+   "id": "80db0fd9",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -88,7 +88,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.134877,
+  "date": 1710721917.1638618,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
