--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ed9d0b4",
+   "id": "a60b4f9f",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8549fe6a",
+   "id": "c8732295",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -23,13 +23,13 @@
     "\n",
     "This lecture provides a JAX implementation of a model in [Dynamic Programming](https://dp.quantecon.org/).\n",
     "\n",
-    "We require the following library to be installed."
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8949397",
+   "id": "9f625479",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328656cb",
+   "id": "dc26ba0d",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578a3d32",
+   "id": "067fce94",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9086f4",
+   "id": "08561b79",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef3313c",
+   "id": "941a4cb8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64650973",
+   "id": "fbc47226",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa70fb9a",
+   "id": "8c9d4ffc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "754ef9b7",
+   "id": "ec53f102",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f46208a3",
+   "id": "eaccf9b3",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f516c3c",
+   "id": "992e9ca0",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c47b51f9",
+   "id": "54ad2a05",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eefb76a8",
+   "id": "60000db0",
    "metadata": {
     "hide-output": false
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff3cf4b8",
+   "id": "81f3c7c9",
    "metadata": {
     "hide-output": false
    },
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56d36eb3",
+   "id": "6b46c8a3",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d776f1",
+   "id": "b8686543",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a25633c",
+   "id": "beba832f",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0cbbaf5",
+   "id": "63392105",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06200f39",
+   "id": "bc6a8d83",
    "metadata": {
     "hide-output": false
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd0101e",
+   "id": "07f80140",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6ff289f",
+   "id": "b121398e",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f334bc8a",
+   "id": "61fbfb0c",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47c2a8c",
+   "id": "868ebe2f",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139a5120",
+   "id": "87520458",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a38bedf",
+   "id": "3bf19e9c",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94278f46",
+   "id": "ad68869e",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e8f030",
+   "id": "8655d34d",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25c65805",
+   "id": "71661d70",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa39eb4",
+   "id": "2289cc9b",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e730b3cc",
+   "id": "60768c9e",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6555161",
+   "id": "8841d7d8",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2629c7",
+   "id": "5c58e0b3",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a64d7c",
+   "id": "0019e630",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4036f112",
+   "id": "a3d3c199",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "902a4f75",
+   "id": "d8f52036",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d04563",
+   "id": "cfb43d14",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9a255a",
+   "id": "b8a24f85",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e5c62c",
+   "id": "bfa080fb",
    "metadata": {
     "hide-output": false
    },
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e726618",
+   "id": "d34f6709",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5419a515",
+   "id": "e98d8ada",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fa7f44",
+   "id": "d4c206d5",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05dfaf7e",
+   "id": "4a0b2567",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd052458",
+   "id": "adba49a0",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc975be",
+   "id": "a8aefc67",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.2052436,
+  "date": 1710721917.332966,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
