--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5895a852",
+   "id": "5444ace6",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0adc391",
+   "id": "111891d3",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9caba81b",
+   "id": "922a83d3",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3eb6d45",
+   "id": "5903cbeb",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "928989e6",
+   "id": "9eaae237",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d97fd20b",
+   "id": "496c70e7",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db3c072c",
+   "id": "d5bee6f4",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f3fa912",
+   "id": "17eccff7",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f544274",
+   "id": "59330887",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093d0ffb",
+   "id": "dbcab2b6",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca97fb66",
+   "id": "1c6fef61",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af35256",
+   "id": "ae2728b8",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "703a37cd",
+   "id": "d848900e",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db4c9be",
+   "id": "2e538ed3",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eadfb7d1",
+   "id": "6be23a4d",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f312813",
+   "id": "a337c633",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c18e3b",
+   "id": "954b27cf",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9eb380",
+   "id": "f60668c4",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c2ffd9c",
+   "id": "e0025e80",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3cdea22",
+   "id": "0b4f267d",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "079822da",
+   "id": "5ee3e431",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98180f83",
+   "id": "9eb7f82f",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f3cc427",
+   "id": "66b0809f",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a547cbda",
+   "id": "9a5910b6",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbdc4aab",
+   "id": "51e3f44d",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4639323",
+   "id": "c61771f3",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd3f9476",
+   "id": "ac8a513c",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f92f3c",
+   "id": "75771711",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b9bf230",
+   "id": "70aa4268",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2279ed5b",
+   "id": "2b5d788c",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ddc245c",
+   "id": "19a75595",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16b171e",
+   "id": "364a7314",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23345eb9",
+   "id": "cd6ba11c",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e4b811",
+   "id": "be7a1c49",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0404c882",
+   "id": "954ec521",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d9ae93",
+   "id": "e8cb19ec",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac9ff318",
+   "id": "6f071e68",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffd3154d",
+   "id": "d7a690e2",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba30c34",
+   "id": "977e0c78",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725a6dea",
+   "id": "91d3bb29",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9821a5",
+   "id": "c0aeaedb",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e6298f",
+   "id": "b6c3217f",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faebb262",
+   "id": "0cd4f7af",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "721172b3",
+   "id": "4b6d4e62",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f787ad",
+   "id": "8ca51752",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be686bc2",
+   "id": "108008dc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a513bb",
+   "id": "8932fdc2",
    "metadata": {
     "hide-output": false
    },
@@ -999,7 +999,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.3749597,
+  "date": 1710721917.489061,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
