--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6fcd34b",
+   "id": "fb7e4b02",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1905e7f6",
+   "id": "abd20ebd",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08b6ad4",
+   "id": "6ed6207d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36cd554",
+   "id": "ff22792a",
    "metadata": {
     "hide-output": false
    },
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df319852",
+   "id": "de236d40",
    "metadata": {},
    "source": [
-    "In addition to what’s in Anaconda, this lecture will need the following libraries:"
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6080eae7",
+   "id": "ae9b2c9d",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdffa530",
+   "id": "b6591229",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc0ac40",
+   "id": "0f18db71",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813e8bab",
+   "id": "55b44217",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b8df54f",
+   "id": "0b71f20a",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a46859",
+   "id": "6d614885",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9a28683",
+   "id": "134bb128",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b0ca56e",
+   "id": "4fe47a62",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2da61c",
+   "id": "b7ffd680",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f5e8b3",
+   "id": "ea600e7e",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "878a4c13",
+   "id": "4c994cff",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bde2ab1",
+   "id": "34884883",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94048f99",
+   "id": "704d9ab9",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59be4e70",
+   "id": "fbd7f24a",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cce8598",
+   "id": "324faae8",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7039e792",
+   "id": "1b95a0f7",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(8.15)](#equation-eq-ntecxdk).\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc1e0589",
+   "id": "e0c7efa5",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109ea9ea",
+   "id": "015e75c3",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c9f12b",
+   "id": "287e5875",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "495f5965",
+   "id": "b8f14731",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aaf9368",
+   "id": "db01e58d",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4034a1b0",
+   "id": "0d248b4c",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4885c03b",
+   "id": "bb8c1893",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608a4d5b",
+   "id": "d71b0b58",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31804fd",
+   "id": "98a9385c",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0034f971",
+   "id": "765496b1",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2ba8f1",
+   "id": "594fb948",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "511faf6a",
+   "id": "90bccdb4",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1472568",
+   "id": "585b985e",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a494390",
+   "id": "8b1f4ffc",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "badd2224",
+   "id": "1305ad21",
    "metadata": {
     "hide-output": false
    },
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd082ae8",
+   "id": "ed330aa6",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117c3c22",
+   "id": "6c8e27ef",
    "metadata": {
     "hide-output": false
    },
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93013ce2",
+   "id": "67a18263",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921d210d",
+   "id": "0c868c83",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff6d0d4a",
+   "id": "622df1c7",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc08b08b",
+   "id": "afee8849",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76babe2d",
+   "id": "ba81191f",
    "metadata": {
     "hide-output": false
    },
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ee910b",
+   "id": "abba94b8",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63fed12",
+   "id": "59eed46c",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744e5783",
+   "id": "1fadcf7d",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c63a9f",
+   "id": "c4a6b06f",
    "metadata": {
     "hide-output": false
    },
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61422180",
+   "id": "346194a6",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d53d7f",
+   "id": "e9c144fa",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdea1329",
+   "id": "7e828a28",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33df0f12",
+   "id": "769cc369",
    "metadata": {
     "hide-output": false
    },
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f837a8",
+   "id": "7c387909",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7363eaa",
+   "id": "b78e43e0",
    "metadata": {
     "hide-output": false
    },
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb47c99",
+   "id": "33228a92",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1846f62",
+   "id": "671bd6cb",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af6784c",
+   "id": "42301408",
    "metadata": {
     "hide-output": false
    },
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a973f7a6",
+   "id": "89ecb330",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc21794",
+   "id": "a878925e",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9525769",
+   "id": "3f3821e2",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2bdc77",
+   "id": "578eeb1f",
    "metadata": {
     "hide-output": false
    },
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f89246",
+   "id": "6d7b2677",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23d4224",
+   "id": "3e42e971",
    "metadata": {
     "hide-output": false
    },
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee62e60",
+   "id": "9cc6cabd",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f77b17",
+   "id": "e12a41e1",
    "metadata": {
     "hide-output": false
    },
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29fd04b3",
+   "id": "8fc00d3a",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e948c38",
+   "id": "ad780a26",
    "metadata": {
     "hide-output": false
    },
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06246f01",
+   "id": "3e695ed9",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c9e760",
+   "id": "940932c1",
    "metadata": {
     "hide-output": false
    },
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15478b7f",
+   "id": "6f0224f5",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2f460d",
+   "id": "d547956c",
    "metadata": {
     "hide-output": false
    },
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8576a0d4",
+   "id": "c314064f",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b528f3",
+   "id": "a7b03752",
    "metadata": {
     "hide-output": false
    },
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130a22f5",
+   "id": "044fd1ef",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "562a0c5f",
+   "id": "ff777faa",
    "metadata": {
     "hide-output": false
    },
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebf36ad",
+   "id": "ad19a643",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cabcb78e",
+   "id": "0aa5dc38",
    "metadata": {
     "hide-output": false
    },
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f12079",
+   "id": "3dda2867",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18200fb5",
+   "id": "4cfcbd50",
    "metadata": {
     "hide-output": false
    },
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d820720",
+   "id": "abe5e499",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1614,7 +1614,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.4494138,
+  "date": 1710721917.559106,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
