--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6fae328b",
+   "id": "5b9c30fc",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8391b4f",
+   "id": "6989e4a0",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef9edd0",
+   "id": "509f497a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c992ba",
+   "id": "40f45567",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfeca9fb",
+   "id": "b2e196a7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c7cee4",
+   "id": "b53174cc",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442ac591",
+   "id": "be04178d",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699f82ac",
+   "id": "e5f528ed",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdabc4d",
+   "id": "d7a326bd",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d9061b",
+   "id": "de30b040",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5864aad9",
+   "id": "ed8a64bc",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd28fd78",
+   "id": "ebf768e6",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a00ee5",
+   "id": "a07f4973",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df2db5db",
+   "id": "10caf6f0",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6bbccb9",
+   "id": "bde8101c",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e6a5c6",
+   "id": "0c7b16ed",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c4fe39",
+   "id": "03c703de",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a936c5ae",
+   "id": "494b900e",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcd271e8",
+   "id": "5493c7bb",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcf4098",
+   "id": "a6e36767",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7d95ed",
+   "id": "5484f9b1",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868d5e10",
+   "id": "c0bce02d",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "077f9a56",
+   "id": "59725f07",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d770ab4",
+   "id": "fc815a68",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54e37afd",
+   "id": "3e666b7a",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e4f661f",
+   "id": "0f97d230",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6fddcd8",
+   "id": "4095cf06",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da12b78",
+   "id": "d12a04e4",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7857a41",
+   "id": "7a45605b",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d6dc11",
+   "id": "745a1c53",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4b4982",
+   "id": "5fe9c9e6",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3b8409",
+   "id": "ac298080",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56fb5d84",
+   "id": "c75c6c78",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b7efd90",
+   "id": "5eab2efa",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab8ce5e",
+   "id": "794bcea3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f3c7258",
+   "id": "0f2a327b",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c3bb6a",
+   "id": "3da00bc4",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c0f712",
+   "id": "89d481eb",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d315d4",
+   "id": "ab202664",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(18.1)](#equation-lambda-mle)"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e889a2e",
+   "id": "34c9e01a",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a6abc2",
+   "id": "4b923010",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc4c67f8",
+   "id": "1802d38e",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d949d80",
+   "id": "eb044fa9",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c87dae8",
+   "id": "fc2f14ed",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ffce8d",
+   "id": "f99bb819",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +709,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.4869905,
+  "date": 1710721917.593858,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
