--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4257c4f",
+   "id": "f663f866",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,24 +10,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b079826",
+   "id": "78d60a83",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
     "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
-    "We require the following library to be installed."
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01343eb7",
+   "id": "27ab73df",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a31e2e83",
+   "id": "196593ec",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0646630e",
+   "id": "88327f9f",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41aea93f",
+   "id": "a5db895e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fde2911",
+   "id": "3f5510e8",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec29140c",
+   "id": "9fa5c42a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d15be3",
+   "id": "56032b0c",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db3571a3",
+   "id": "26be96b9",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "830dc83f",
+   "id": "6eeec9aa",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07194f57",
+   "id": "c5378833",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26dd5cf7",
+   "id": "2783f70e",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08df222a",
+   "id": "cdf11e74",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d403b3",
+   "id": "f70573c9",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf4b552",
+   "id": "dead3062",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcd2cc0d",
+   "id": "78a01ac7",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3bdaf9d",
+   "id": "4277119b",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5898b58c",
+   "id": "3e90e0ef",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf71ac3",
+   "id": "94bcbb2b",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87521ff7",
+   "id": "a36fc58e",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "824e4be3",
+   "id": "dff45341",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "164399ed",
+   "id": "21a1ca7a",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e05d7a",
+   "id": "816f89fd",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9adc56f8",
+   "id": "3b3061ce",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1968be",
+   "id": "467f803f",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feed0942",
+   "id": "fffc0d84",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec71bfa",
+   "id": "823e350e",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e595e432",
+   "id": "4ab1d2b2",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a26519",
+   "id": "8b12e678",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83497526",
+   "id": "4baff8c4",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12ff80a",
+   "id": "7efbf013",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b085f7ee",
+   "id": "9d780cf7",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8d82bc",
+   "id": "1f10dba6",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f3d3c90",
+   "id": "03bde3d8",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54aae8b9",
+   "id": "3a242540",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c6901f",
+   "id": "4ca17e5d",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a51a1ae",
+   "id": "bae42f7e",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5fff1c4",
+   "id": "0cb4c173",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bbf0c5a",
+   "id": "9046dc19",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "283e98f1",
+   "id": "dbea27a8",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb60aca6",
+   "id": "74ab0099",
    "metadata": {
     "hide-output": false
    },
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8b3253",
+   "id": "95c93fe0",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02aa1386",
+   "id": "e76e943e",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2167529e",
+   "id": "975b5978",
    "metadata": {
     "hide-output": false
    },
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f734e2",
+   "id": "005a47be",
    "metadata": {
     "hide-output": false
    },
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83f3c7b",
+   "id": "78e2631f",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24fbbad",
+   "id": "955f1574",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed89749",
+   "id": "59b0d838",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.5623312,
+  "date": 1710721917.663827,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
