--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b5dc69a",
+   "id": "e51163c7",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,24 +10,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cbcd311",
+   "id": "be778a67",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
     "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
-    "In addition to what’s in Anaconda, this lecture will need the following libraries:"
+    "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824cd9cd",
+   "id": "e7d5c6db",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c689081",
+   "id": "a8089ea2",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0eaf38a",
+   "id": "b43305b2",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61725a9",
+   "id": "7212164e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9db6b2a2",
+   "id": "3220d077",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9a0b68",
+   "id": "29148636",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "519fbd71",
+   "id": "a0568045",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd64cf4b",
+   "id": "e46c2aaa",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31fcdb7b",
+   "id": "ece0d930",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2def8141",
+   "id": "36f92eee",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d26d826",
+   "id": "b37bc55e",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697bcf9a",
+   "id": "fb1fbcb5",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37fa9b6d",
+   "id": "2a1f32aa",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571b964f",
+   "id": "8c4aa2e7",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921cf279",
+   "id": "cc0a3397",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa666525",
+   "id": "9bb7687a",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "539ea310",
+   "id": "636baaaa",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1d01b2",
+   "id": "a2eed8bf",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cff3a0",
+   "id": "b4f16611",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502df704",
+   "id": "7595d309",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb5525a",
+   "id": "981baa54",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5580aa2",
+   "id": "8b02fbc7",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365b1786",
+   "id": "34db015d",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5833b2",
+   "id": "0069f054",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca12b325",
+   "id": "81d801ad",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e32edb7",
+   "id": "499cd08a",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4ca177",
+   "id": "84085d6f",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a91283",
+   "id": "0ff175f6",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05c40e5",
+   "id": "6eecea37",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ecbce6",
+   "id": "cda98e1e",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc242ec9",
+   "id": "48eeb5fc",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8865b06",
+   "id": "24c25a78",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d04984",
+   "id": "628f0fd3",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e99bdff6",
+   "id": "fccd6537",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51fbe387",
+   "id": "f3115901",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f3cdd4",
+   "id": "cfa1fcd6",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5960e758",
+   "id": "7c7b6313",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39fe300a",
+   "id": "d9c89018",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1679093",
+   "id": "2c3a2a2d",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41be1892",
+   "id": "d12267d1",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d575b7",
+   "id": "01f4c291",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b7972d3",
+   "id": "37067f29",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d73fad",
+   "id": "9bda4158",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075f15ea",
+   "id": "1be2c638",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e80c341",
+   "id": "e74c16b4",
    "metadata": {
     "hide-output": false
    },
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ba4fee",
+   "id": "89d232e1",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dc0ea8",
+   "id": "cd03e2d1",
    "metadata": {
     "hide-output": false
    },
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3b41d7",
+   "id": "b0f7c9c6",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af413359",
+   "id": "4f591c4d",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf18c6d8",
+   "id": "40e21d19",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6819ab",
+   "id": "a658c8f2",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda3c947",
+   "id": "5c1cbc16",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85885d4e",
+   "id": "9f79c574",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11d0741c",
+   "id": "34abddf6",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a341eb46",
+   "id": "958319fd",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "615446ce",
+   "id": "2c373b12",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -910,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44d552f",
+   "id": "13b958f2",
    "metadata": {
     "hide-output": false
    },
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce107e7",
+   "id": "fe21f146",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f27a75",
+   "id": "c5d4152c",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e94823",
+   "id": "8af0c683",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -953,7 +953,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.6027725,
+  "date": 1710721917.7029216,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
