--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "43997dd3",
+   "id": "c0b79000",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcfb4f9",
+   "id": "67b3ffb3",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00d74b7",
+   "id": "bc5e12d3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ebcee4",
+   "id": "fa09819b",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29be204",
+   "id": "d5ed4ca6",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e181b2c7",
+   "id": "93e7a6e3",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "033a9cdb",
+   "id": "2ecb4a84",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a5a204",
+   "id": "f6bcd195",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9392ef7d",
+   "id": "bb36d2a1",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2189bcc3",
+   "id": "72cfd2ff",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da48b6a8",
+   "id": "97c85e0a",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4dd2a9",
+   "id": "53091036",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "084b9153",
+   "id": "7b4443e6",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "837196f9",
+   "id": "d81ed3dd",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ca56f8",
+   "id": "8dd12fef",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e490e381",
+   "id": "d78c7429",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f40dd67",
+   "id": "581957c0",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0954a213",
+   "id": "4c6675fd",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45908251",
+   "id": "7cf27c57",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191f2802",
+   "id": "5de5e64d",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9a5dfa3",
+   "id": "0cfbd83f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6b249d",
+   "id": "20993c68",
    "metadata": {},
    "source": [
     "## Exercise 11.1\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34709c0",
+   "id": "260c3648",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc40eae",
+   "id": "3ad97626",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 11.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b59088",
+   "id": "1870d0b2",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b996a53a",
+   "id": "61e193eb",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b30b2cb",
+   "id": "3ec7d450",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7fb7a56",
+   "id": "36391186",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd453f1",
+   "id": "24400980",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830cce63",
+   "id": "de60d21e",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89043be",
+   "id": "dd193b8b",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d1517f",
+   "id": "c527606a",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826102f8",
+   "id": "30f89539",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dfc6532",
+   "id": "b0fce09b",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8247c0c6",
+   "id": "825e378c",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7ad7bb",
+   "id": "30eb27bd",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8046754",
+   "id": "9d81815a",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.7926779,
+  "date": 1710721917.874751,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
