--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b817c9c8",
+   "id": "5b2259af",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8a7be4",
+   "id": "cb6a3d68",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
+    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
     "\n",
     "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7ea614",
+   "id": "15871561",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f416198",
+   "id": "8051cad8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7728d525",
+   "id": "b171f259",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "346512b0",
+   "id": "196dc06c",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc1c61c",
+   "id": "576dc1da",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0fd50c",
+   "id": "807b6190",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b44bcd",
+   "id": "cfe3b9c2",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906883ef",
+   "id": "83026fc5",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fb68b3",
+   "id": "8d0d4a56",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d99590",
+   "id": "cc69db4c",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44426201",
+   "id": "81422a23",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e238114",
+   "id": "ab20e7c4",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0db875",
+   "id": "62c42990",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b54daf4a",
+   "id": "e1a61891",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b848c100",
+   "id": "3b36be2a",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89032ab1",
+   "id": "abf5c596",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e2badd",
+   "id": "2b2c70d0",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962d2484",
+   "id": "5822bc0f",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc447c2b",
+   "id": "56a793e5",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf25deb",
+   "id": "889f6e4a",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4fb770",
+   "id": "e849b1ce",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f2528a3",
+   "id": "4476d3c8",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071fdbf2",
+   "id": "608b31bf",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb0c8d6",
+   "id": "59909cca",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10dda82",
+   "id": "8f5f31ff",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab74f96e",
+   "id": "f7000372",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de832870",
+   "id": "62fed755",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32bdde94",
+   "id": "6d46742d",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5acf864a",
+   "id": "48433155",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3915471b",
+   "id": "2db5f6fd",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a50f03",
+   "id": "6f118079",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e036e16f",
+   "id": "5fe728a6",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2eb71f1",
+   "id": "3ff4a6f6",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83d1f4b",
+   "id": "887743f1",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d474986",
+   "id": "b9479de4",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70cb44d9",
+   "id": "8a59ed3e",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293b67bb",
+   "id": "1db51673",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7aaa13",
+   "id": "c6451077",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d01e1c5",
+   "id": "ace68d95",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93357017",
+   "id": "d08b3e6b",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6024ba2",
+   "id": "0e7e2eed",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf39ba4a",
+   "id": "56eca116",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4dcb63b",
+   "id": "3bde4468",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e6ea7f",
+   "id": "7e1091e4",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f120ab79",
+   "id": "93730163",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "493eaf8c",
+   "id": "55b1b998",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab38843b",
+   "id": "534cc595",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7c8fe2",
+   "id": "acabc071",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff61f849",
+   "id": "f13aeb01",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d739a23a",
+   "id": "436ffb92",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "277701fc",
+   "id": "39873060",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b99ef03",
+   "id": "4fad1b6e",
    "metadata": {
     "hide-output": false
    },
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "904da56a",
+   "id": "8b9755e5",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263337ad",
+   "id": "f1eb2607",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f3d5c1a",
+   "id": "17b6c503",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cc7bee",
+   "id": "748c527a",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bddc8d",
+   "id": "ca5f510e",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c2f4e89",
+   "id": "77087c24",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a5dbc03",
+   "id": "4fb1383c",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a756245b",
+   "id": "fb1d8ccf",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93c9012a",
+   "id": "f59c25f6",
    "metadata": {},
    "source": [
     "## Exercise 6.2\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a382f5",
+   "id": "cc751a90",
    "metadata": {
     "hide-output": false
    },
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3d9534",
+   "id": "9152c59f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8dc01fa",
+   "id": "88218551",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf7a6c1",
+   "id": "a7542774",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508944b7",
+   "id": "9d7a7080",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0fb8cb1",
+   "id": "471964ea",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86cc9b8",
+   "id": "8779cabd",
    "metadata": {
     "hide-output": false
    },
@@ -1099,7 +1099,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.8628583,
+  "date": 1710721917.9396083,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
