--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f1790e4",
+   "id": "255e6632",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db7ca15",
+   "id": "f9789a78",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1710624843.8722932,
+  "date": 1710721917.948798,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
